--- a/css/style.css
+++ b/css/style.css
@@ -7492,8 +7492,10 @@ h1, h2, h3, h4, h5,
   color: #fff;
   height: 700px; }
   .slider-text h1 {
+    font-family: sans-serif; 
     font-size: 60px;
-    color: #fff;
+    color: yellow;
+    -webkit-text-stroke: 2px black;
     line-height: 1.2;
     font-weight: 400; }
     @media (max-width: 991.98px) {
