--- a/css/style.css
+++ b/css/style.css
@@ -7494,7 +7494,7 @@ h1, h2, h3, h4, h5,
   .slider-text h1 {
     font-family: sans-serif; 
     font-size: 60px;
-    color: yellow;
+    color: white;
     -webkit-text-stroke: 2px black;
     line-height: 1.2;
     font-weight: 400; }
